@@ -37,7 +37,7 @@
 //#define __THREADS__		// Tested Threads... didn't work faster =( 
 #define __ENVIRONMENT__		// Has OS Environment?
 
-const std::string VERSION 	= "1.2.1";
+const std::string VERSION 	= "1.2.2";
 const std::string COPYRIGHT 	= "Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>";
 const std::string WEBSITE 	= "http://highmoon.gerdsmeier.net";
 
